[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/OptionMenuIndicator.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/styles/normal_style.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/selected_style.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/nokia-fc.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/music_level_menu.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/DoneAnimation.tscn" type="PackedScene" id=6]

[node name="MusicLevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -756.0
margin_bottom = -432.0
rect_scale = Vector2( 10, 10 )
script = ExtResource( 5 )

[node name="MenuIndicator" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopMenuIndicator" type="Label" parent="MenuIndicator"]
margin_left = 54.0
margin_right = 61.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "2"
align = 1

[node name="DashMenuIndicator" type="Label" parent="MenuIndicator"]
margin_left = 60.0
margin_right = 67.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "-"
align = 1

[node name="MiddleMenuIndicator" type="Label" parent="MenuIndicator"]
margin_left = 66.0
margin_right = 73.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1

[node name="DashMenuIndicator2" type="Label" parent="MenuIndicator"]
margin_left = 72.0
margin_right = 79.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "-"
align = 1

[node name="CurrentOption" type="Label" parent="MenuIndicator"]
margin_left = 78.0
margin_right = 85.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1

[node name="OptionMenuIndicator" parent="." instance=ExtResource( 1 )]
anchor_left = 0.952
anchor_top = 0.187
anchor_right = 0.988
anchor_bottom = 0.812
margin_left = 0.0319901
margin_top = 0.0240002
margin_right = 0.00799561
margin_bottom = 0.0239983

[node name="LevelOptions" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelTopLabel" type="Label" parent="LevelOptions"]
margin_left = 1.0
margin_top = 9.0
margin_right = 79.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "LevelTop"

[node name="LevelMiddleLabel" type="Label" parent="LevelOptions"]
margin_left = 1.0
margin_top = 19.0
margin_right = 79.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "LevelMiddle"

[node name="LevelBottomLabel" type="Label" parent="LevelOptions"]
margin_left = 1.0
margin_top = 29.0
margin_right = 79.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "LevelBottom"

[node name="BackLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 39.0
margin_right = 26.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "BACK"

[node name="OkLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -9.0
margin_right = 7.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 4 )
text = "OK"
align = 1
valign = 2
clip_text = true

[node name="DoneAnimation" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="animation_finished" from="DoneAnimation" to="." method="_on_DoneAnimation_finished"]
